Updates selection-display-menu by making both its the icon containers exist in the menu so that they can have their visibility toggled instead of adding or removing the elements based on selections. Changed most instances of “playbackRates” to “playbackRateOptions” for clarity and to differentiate it from “playbackRate” variables. Fixed some convention issues with using snake vs camel case for playbackRates Added a template for the SelectionDisplayMenu’s HTML

--- a/src/css/controls/imports/tooltip.less
+++ b/src/css/controls/imports/tooltip.less
@@ -81,36 +81,30 @@
 
 .jw-selection-menu {
     display: inline-block;
-    min-width: 2.5em;
+    width: 2.5em;
     height: 2.5em;
 
-    .jw-menu-custom-icon {
-        height: 2.5em;
-        line-height: 2.5em;
+    .jw-selection-menu-icon-container {
         pointer-events: none;
+        height: inherit;
     }
 
-    &.jw-text-icon {
+    .jw-menu-selection-text {
         /* line-height receives a corrections to vertically center content in the control bar correctly (0.75 * 1 1/3 = 1) */
-        .jw-menu-custom-icon {
-            vertical-align: baseline;
-            font-weight: bold;
-            font-size: 0.75em;
-            height: 100%;
-            line-height: 2.5em * 1.334;
-            text-align: center;
-        }
+        vertical-align: baseline;
+        font-weight: bold;
+        font-size: 0.75em;
+        height: 100%;
+        line-height: 2.5em * 1.334;
+        text-align: center;
     }
 
-    &.jw-svg-icon {
-        .jw-menu-custom-icon {
-            width: 1.75em;
-            height: 100%;
+    .jw-menu-selection-icon {
+        height: 100%;
 
-            svg {
-                height: 100%;
-                width: 100%;
-            }
+        svg {
+            height: 100%;
+            width: 100%;
         }
     }
 }
