--- a/src/css/shared-imports/mixins.less
+++ b/src/css/shared-imports/mixins.less
@@ -331,7 +331,7 @@
                 line-height: @controlbar-height;
             }
 
-            .jw-selection-menu.jw-text-icon .jw-menu-custom-icon {
+            .jw-selection-menu .jw-menu-selection-text {
                 height: @controlbar-height * 1.334;
                 line-height: @controlbar-height * 1.334;
             }
@@ -386,7 +386,6 @@
             }
 
             .jw-selection-menu {
-                min-width: 2.5em;
                 padding: 0 @ui-padding / 2;
             }
         }
